<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stark.myappportfolio.MainActivity">


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/editText" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:textColor="@color/text"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:id="@+id/button"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:textColor="@color/text"
        android:background="@drawable/buttons"
        android:id="@+id/button2"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:background="@drawable/buttons"
        android:layout_margin="10dp"
        android:text="@string/build_bigger"
        android:id="@+id/button3" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:background="@drawable/buttons"
        android:text="@string/make_your_app_material"
        android:id="@+id/button4" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:background="@drawable/buttons"
        android:layout_margin="10dp"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:background="@drawable/buttons"
        android:text="@string/capstone"
        android:id="@+id/button6" />
</LinearLayout>
